--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 										<h3>Contact Us</h3>
 										<ul>
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="https://www.facebook.com/Pas-%C3%80-Pattes-2160304850676334/" class="icon fa-facebook"><span class="label">Facebook/</span></a></li>
+											<li><a href="http://facebook.com/Pas-%C3%80-Pattes-2160304850676334/" class="icon fa-facebook"><span class="label">Facebook/</span></a></li>
 											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
