--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 										<ul>
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="http://facebook.com/Pas-%C3%80-Pattes-2160304850676334/" class="icon fa-facebook"><span class="label">Facebook/</span></a></li>
-											<li><a href="http://instagram.com/?hl=fr-ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="http://instagram.com/pas.a.pattes/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 										</ul>
