--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
+									<li class="current"><a href="index.html">Accueil</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
@@ -60,13 +60,13 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="7u 12u(medium)">
-								<h2>Hi. This is Verti.</h2>
-								<p>It's a free responsive site template by HTML5 UP</p>
+								<h2>Bienvenue chez Pas à Pattes.</h2>
+								<p>Services personnalisés de toutes sortes pour animaux de compagnie.</p>
 							</div>
 							<div class="5u 12u(medium)">
 								<ul>
-									<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
-									<li><a href="#" class="button alt big icon fa-question-circle">More info</a></li>
+									<li><a href="#" class="button big icon fa-arrow-circle-right">Ça m'intéresse!</a></li>
+									<li><a href="#" class="button alt big icon fa-question-circle">Que faisons nous?</a></li>
 								</ul>
 							</div>
 						</div>
