--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="7u 12u(medium)">
-								<h2>Bienvenue chez Pas à Pattes.</h2>
-								<p>Services personnalisés de toutes sortes pour animaux de compagnie.</p>
+								<h2>Pas à Pattes.</h2>
+								<p>Services personnalisés pour animaux de compagnie.</p>
 							</div>
 							<div class="5u 12u(medium)">
 								<ul>
 									<li><a href="#" class="button big icon fa-arrow-circle-right">Ça m'intéresse!</a></li>
-									<li><a href="#" class="button alt big icon fa-question-circle">Que faisons nous?</a></li>
+									<li><a href="#" class="button alt big icon fa-question-circle">Mais encore?</a></li>
 								</ul>
 							</div>
 						</div>
