--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="7u 12u(medium)">
-								<h2>Pas à Pattes.</h2>
+								<h2>Pas à Pattes</h2>
 								<p>Services personnalisés pour animaux de compagnie.</p>
 							</div>
 							<div class="5u 12u(medium)">
@@ -84,7 +84,7 @@
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Put something here</h2>
+												<h2>Notre objectif</h2>
 												<p>Maybe here as well I think</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
@@ -99,7 +99,7 @@
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>An interesting title</h2>
+												<h2>Services offerts</h2>
 												<p>This is also an interesting subtitle</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
@@ -114,7 +114,7 @@
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Oh, and finally ...</h2>
+												<h2>À propos de <strong>Pas à Pattes</strong></h2>
 												<p>Here's another intriguing subtitle</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
@@ -225,8 +225,6 @@
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="http://facebook.com/Pas-%C3%80-Pattes-2160304850676334/" class="icon fa-facebook"><span class="label">Facebook/</span></a></li>
 											<li><a href="http://instagram.com/pas.a.pattes" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 										</ul>
 										<p>1234 Fictional Road<br />
 										Nashville, TN 00000<br />
