--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>À propos de <strong>Pas à Pattes</strong></h2>
+												<h2>À propos de Pas à Pattes</h2>
 												<p>Here's another intriguing subtitle</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
