--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Pas à Pattes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,14 +22,13 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">Pas à Pattes</a></h1>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">Welcome</a></li>
+									<li><a href="index.html">Accueil</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
@@ -64,29 +63,33 @@
 							<!-- Content -->
 								<article>
 
-									<h2>No Sidebar</h2>
+									<h2>Notre objectif</h2>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+									<p>Nos animaux de compagnie occupent une place importante dans nos vies  
+									et nous sommes prêts à beaucoup pour assurer leur santé et bien-être. 
+									Tout comme pour nous, l’activité physique contribue beaucoup à ces deux 
+									facteurs chez notre meilleur ami, le chien. Bien que plusieurs races actuelles 
+									diffèrent beaucoup de leurs cousins sauvages qui eux parcourent  plusieurs 
+									dizaines de kilomètres par jour, nos fidèles compagnons n’ont pas perdu leur 
+									goût et leur capacité pour la marche et la course. La race et l’âge de votre 
+									chien ont un impact sur la quantité d’activité physique requise mais une chose 
+									est certaine : votre chien a besoin de bouger. Selon l’ASPCA*, plusieurs 
+									problèmes de comportement sont d’ailleurs liés au manque d’activité. La 
+									destruction d’objets, meubles ou du terrain extérieur, l’hyperactivité, la 
+									recherche d’attention excessive et l’agressivité lors de jeux figure parmi 
+									les plus communs.
 
-									<h3>More intriguing information</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+									Malheureusement, les contraintes de la vie moderne nous empêchent parfois 
+									d’accorder autant de temps que l’on voudrait à nos animaux de compagnie. 
+									Que ce soit une blessure, un manque de temps, des vacances, un imprévu ou 
+									toute autre raison, notre ami lui doit continuer de bouger. C’est pourquoi 
+									nous offrons des services de promenade de chien allant de la marche à la 
+									course en passant par de simples jeux. Notre mission est très simple, offrir 
+									un service personnalisé de qualité permettant aux chiens de bouger et dépenser 
+									leur énergie  et à leurs maître d’avoir la tête tranquille en sachant leur animal 
+									entre bonne mains.
 
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+									* American Society for the Prevention of Cruelty to Animals®</p>
 
 								</article>
 
