--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://pasapattes.github.io/Pasapattes/no-sidebar.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Notre objectif</h2>
